<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dearcustomerconfirm">Dear can you please confirm that you take your medicine ?</string>
    <string name="acceptmedience">Dear please i need your help for watching my medicine can you help me ?</string>
    
        <string name="cancelmedicine">I don not like to take this medicine</string>
    
        <string name="thanksforinterest">Thank you</string>
        
        <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="app_name">Prescription Watcher</string>
    <string name="prescription">Prescription</string>
    <string name="drugName">Drug name</string>
    <string name="dosage">Dosage</string>
    <string name="directions">Directions</string>
    <string name="timesPerDay">Times per day</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="defaultStartTime">07:00:00</string>
    <string name="defaultEndTime">22:00:00</string>
    <string name="addingPrescriptionSucceeded">adding prescription succeeded.</string>
    <string name="addingPrescriptionFailed">adding prescription failed.</string>
    <string name="prescriptionMedicineNameError">Invalid prescription medicine name.</string>
    <string name="prescriptionStartDateError">Invalid prescription end date. Should be after start date.</string>
    <string name="prescriptionStartTimeError">Invalid prescription end time. Should be after start time.</string>
    <string name="prescriptionDosageError">Invalid prescription dosage. Should be greater than zero.</string>
    <string name="prescriptionTimesPerDayError">Invalid prescription times per day. Should be greater than zero.</string>

    <string name="prescriptions">Prescriptions</string>
    <string name="watching">Watch prescriptions</string>
    <string name="settings">Settings</string>
	<string name="testconnection">testconnection</string>
    <string name="noPrescriptions">No saved prescriptions. click create new to save prescription.</string>

    <string name="newPrescription">New prescription</string>
    <string name="delete">delete</string>
    <string name="deleteEntry">Delete prescription</string>
    <string name="deleteEntryMessage">Are you sure you want to delete this prescription?</string>
    <string name="user_profile">User profile</string>
    <string name="user_name">User name</string>
    <string name="user_name_summary">User name for identified for your prescriptions</string>
    <string name="pref_vibrate">vibrate</string>
    <string name="pref_vibrate_summary">Enable vibrate for reminders</string>
    <string name="pref_watch">watch prescriptions</string>
    <string name="pref_watch_summary">Enable watching amd monitoring prescriptions</string>
<string name="prescriptionimage">Image</string>
    <string name="selectImage">Tap to select image from gallery</string>
</resources>
