<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     
    <PreferenceCategory android:title="@string/user_profile" >
        <EditTextPreference android:title="@string/user_name"
            android:summary="@string/user_name_summary"
            android:key="prefUsername"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_vibrate" >
        <CheckBoxPreference android:defaultValue="false"
            android:key="prefVibrate"
            android:summary="@string/pref_vibrate_summary"
            android:title="@string/pref_vibrate" >
        </CheckBoxPreference>
 
    </PreferenceCategory>
 
    <PreferenceCategory android:title="@string/pref_watch" >
        <CheckBoxPreference android:defaultValue="true"
                            android:key="prefWatch"
                            android:summary="@string/pref_watch_summary"
                            android:title="@string/pref_watch" >
        </CheckBoxPreference>
 
    </PreferenceCategory>

</PreferenceScreen>